--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   "author": "Seth Fitzsimmons <seth@mojodna.net>",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "lru-cache": "~2.3.1"
+    "lru-cache": "^2.5.0"
   }
 }
